[package]
name = "tic-tac-toe-game-rs"
version = "1.0.0"
edition = "2021"
description = "A simple rust cli implementation of the classic tic tac toe game for 2 players."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
